# whisper.cpp

examples/stream/: CMakeLists.txt  stream.cpp
examples/stream/wave_io/: audio_wave.c  audio_wave.h
